# composer-client

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: ci.yml  crates-publish.yml  release-please.yml
crates/composer-autoload/: CHANGELOG.md  Cargo.toml  README.md
crates/composer-autoload/benches/: scan.rs
crates/composer-autoload/examples/: dump_bench.rs
crates/composer-autoload/src/: autoloader.rs  collect.rs  emit.rs  installed.rs  lib.rs  lock.rs  vendored.rs  version.rs
crates/composer-autoload/src/emit/: platform_check.rs  real.rs  static_loader.rs
crates/composer-autoload/src/scan/: cleaner.rs  exclude.rs  filter.rs  finder.rs  mod.rs  walker.rs
crates/composer-autoload/tests/: byte_equivalence.rs  live_autoloader.rs  version_normalize.rs
crates/composer-autoload/tests/data/: version_normalize.tsv  version_normalize_inputs.txt
crates/composer-autoload/tests/fixtures/apcu-autoloader/input/: composer.json  flags
crates/composer-autoload/tests/fixtures/autoloader-suffix/input/: composer.json
crates/composer-autoload/tests/fixtures/classmap-authoritative/input/: composer.json  flags
crates/composer-autoload/tests/fixtures/classmap-exclude/input/: composer.json
crates/composer-autoload/tests/fixtures/classmap-single/input/: composer.json
crates/composer-autoload/tests/fixtures/files-deps-order/input/: composer.json
crates/composer-autoload/tests/fixtures/files-single/input/: composer.json
crates/composer-autoload/tests/fixtures/installer-paths-frameworks/input/: composer.json
crates/composer-autoload/tests/fixtures/installer-paths/input/: composer.json
crates/composer-autoload/tests/fixtures/mixed/input/: composer.json
crates/composer-autoload/tests/fixtures/platform-check-php-only/input/: composer.json
crates/composer-autoload/tests/fixtures/platform-check-provider/input/: composer.json
crates/composer-autoload/tests/fixtures/platform-check-strict/input/: composer.json
crates/composer-autoload/tests/fixtures/psr0-fallback/input/: composer.json
crates/composer-autoload/tests/fixtures/psr0-fallback/input/fallback-lib/Acme/: Helper.php
crates/composer-autoload/tests/fixtures/psr0-single/input/: composer.json
crates/composer-autoload/tests/fixtures/psr4-optimize/input/: composer.json  flags
crates/composer-autoload/tests/fixtures/psr4-overlap/input/: composer.json
crates/composer-autoload/tests/fixtures/psr4-root-spans-vendor/input/: composer.json
crates/composer-autoload/tests/fixtures/psr4-shared-namespace/input/: composer.json
crates/composer-autoload/tests/fixtures/psr4-single/input/: composer.json
crates/composer-install/: CHANGELOG.md  Cargo.toml  README.md
crates/composer-install/src/: archive.rs  auth.rs  bin_proxy.rs  downloader.rs  fetch.rs  lib.rs  orchestrate.rs  path_link.rs  progress.rs
crates/composer-install/src/bin_proxy/: tests.rs
crates/composer-install/src/downloader/: tests.rs
crates/composer-install/src/orchestrate/: tests.rs
crates/composer-installers/: CHANGELOG.md  Cargo.toml  README.md
crates/composer-installers/src/: deploy.rs  laravel.rs  lib.rs  paths.rs
crates/composer-manifest/: CHANGELOG.md  Cargo.toml  README.md
crates/composer-manifest/src/: lib.rs  lockfile.rs  metadata.rs
crates/composer-manifest/src/metadata/: tests.rs
crates/composer-patches/: CHANGELOG.md  Cargo.toml  README.md
crates/composer-patches/src/: apply.rs  diff.rs  lib.rs  lock.rs  make.rs  model.rs  pass.rs  plan.rs  report.rs  resolve.rs  target.rs
crates/composer-patches/tests/: apply_fixtures.rs
crates/composer-patches/tests/fixtures/context-drift/: patch.diff
crates/composer-patches/tests/fixtures/context-drift/after/: f.txt
crates/composer-patches/tests/fixtures/context-drift/before/: f.txt
crates/composer-patches/tests/fixtures/create-delete/: patch.diff
crates/composer-patches/tests/fixtures/create-delete/after/: new.php
crates/composer-patches/tests/fixtures/create-delete/before/: old.php
crates/composer-patches/tests/fixtures/drupal-p1/: patch.diff
crates/composer-patches/tests/fixtures/drupal-p1/after/web/core/lib/: Database.php
crates/composer-patches/tests/fixtures/drupal-p1/before/web/core/lib/: Database.php
crates/composer-patches/tests/fixtures/magento-p4/: patch.diff
crates/composer-patches/tests/fixtures/magento-p4/after/Block/: View.php
crates/composer-patches/tests/fixtures/magento-p4/after/Model/: Product.php
crates/composer-patches/tests/fixtures/magento-p4/before/Block/: View.php
crates/composer-patches/tests/fixtures/magento-p4/before/Model/: Product.php
crates/composer-patches/tests/fixtures/multi-file/: patch.diff
crates/composer-patches/tests/fixtures/multi-file/after/b/: y.txt
