[workspace]
# Client-side Composer behavior for the cresset-tools family — the layer
# ABOVE composer-rs's protocol contract. composer-rs models the Composer
# *contract* (version algebra, wire format, PHP-JSON encoding — defined by
# Composer's spec, shared by clients AND servers). This workspace holds the
# client *behavior* that more than one client needs: `bougie` (the package
# manager) and `magebuild` (the build orchestrator) — declarative install
# plugins, autoload generation, and install-from-lock. A repository server
# (sconce) never dumps an autoloader or installs to paths, so these stay out
# of composer-rs by its own contract-vs-behavior boundary.
#
# `composer-installers` is the first tenant; `composer-autoload` (byte-equiv
# `dump-autoload`) and `composer-install` (the install-from-lock primitive)
# are the expected next ones.
resolver = "3"
members = [
    "crates/composer-installers",
    "crates/composer-autoload",
    "crates/composer-patches",
]

[workspace.package]
# No shared `version` — crates are versioned INDEPENDENTLY (each crate's
# Cargo.toml carries its own version; release-please's cargo-workspace plugin
# bumps them and updates inter-crate pins per crate).
edition = "2024"
rust-version = "1.95"
license = "EUPL-1.2"
authors = ["Jelle Besseling <jelle@pingiun.com>"]
repository = "https://github.com/cresset-tools/composer-client"

# Shared EXTERNAL deps centralized so members reference them with
# `{ workspace = true }`. Inter-crate deps are deliberately NOT here: each
# dependent crate declares them directly (`path` + `version`) so release-please's
# cargo-workspace plugin can bump the pin per crate under independent versioning.
[workspace.dependencies]
# Shared Composer-domain crates from composer-rs (crates.io). Pinned to match
# bougie so composer-autoload stays byte-equivalent to what bougie ships.
composer-php-json = "0.1"
composer-semver = "0.1.0"

# Shared external deps.
eyre = "0.6"
flickzeug = "0.5.1"
md-5 = "0.11"
memchr = "2"
rayon = "1.10"
sha2 = "0.11"
similar = "2.7"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tempfile = "3.10"
tracing = "0.1"
walkdir = "2.5"
regex = { version = "1.11", default-features = false, features = [
    "std",
    "perf",
    "unicode-perl",
    "unicode-case",
] }
criterion = { version = "0.5", default-features = false, features = [
    "cargo_bench_support",
] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
# Tolerated on the byte-exact Composer-faithful ports: composer-autoload mirrors
# Composer's ClassLoader shape (many-bool flag structs, long emit functions),
# so satisfying these pedantic lints would reduce fidelity to upstream. Kept as
# allow rather than refactored.
doc_markdown = "allow"
elidable_lifetime_names = "allow"
map_unwrap_or = "allow"
needless_pass_by_value = "allow"
ptr_arg = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"

[profile.release]
# Smaller, faster, no panic-unwinder — mirrors the family default.
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
